<resources>
    <string name="app_name">Projeto Final</string>
    <string name="usuario">Usuário</string>
    <string name="usuario2">Usuário*</string>
    <string name="senha">Senha</string>
    <string name="senha2">Senha*</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="esqueceu">Esqueceu a senha?</string>
    <string name="ou">ou</string>
    <string name="cadastrar">Não tem uma conta? Cadastre-se.</string>
    <string name="nome">Nome*</string>
    <string name="sobrenome">Sobrenome*</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="endereco">Endereço</string>
    <string name="dtnasc">Data de Nascimento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cpf">CPF</string>
    <string name="rg">RG</string>
    <string name="passaporte">Passaporte</string>
    <string name="title_activity_cadastrar">Cadastrar Usuário</string>
    <string name="cep">CEP</string>
    <string name="email2">E-mail*</string>
    <string name="enviar">ENVIAR</string>
    <string name="title_activity_principal">Principal</string>
    <string name="title_header">Android</string>
    <string name="email_header">email@example.com</string>
    <string name="perfil">Perfil</string>
    <string name="lugares">Lugares</string>
    <string name="contatos">Contatos</string>

    <string-array name="estados">
        <item>AC - Acre               </item>
        <item>AL - Alagoas            </item>
        <item>AP - Amapá              </item>
        <item>AM - Amazonas           </item>
        <item>BA - Bahia              </item>
        <item>CE - Ceará              </item>
        <item>DF - Distrito Federal   </item>
        <item>ES - Espírito Santo     </item>
        <item>GO - Goiás              </item>
        <item>MA - Maranhão           </item>
        <item>MT - Mato Grosso        </item>
        <item>MS - Mato Grosso do Sul </item>
        <item>MG - Minas Gerais       </item>
        <item>PA - Pará               </item>
        <item>PB - Paraíba            </item>
        <item>PR - Paraná             </item>
        <item>PE - Pernambuco         </item>
        <item>PI - Piauí              </item>
        <item>RJ - Rio de Janeiro     </item>
        <item>RN - Rio Grande do Norte</item>
        <item>RS - Rio Grande do Sul  </item>
        <item>RO - Rondônia           </item>
        <item>RR - Roraima            </item>
        <item>SC - Santa Catarina     </item>
        <item>SP - São Paulo          </item>
        <item>SE - Sergipe            </item>
        <item>TO - Tocantins          </item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sairdoapp">Sair do aplicativo</string>
    <string name="sair">Sair</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="sobre">Aplicativo desenvolvido por Ademar Zório Neto para a matéria de Tópicos Especiais em Informática da FATEC Ourinhos.</string>
    <string name="title_activity_contato">Contato</string>
    <string name="empty">Nenhum contato</string>
    <string name="pesquisar">Pesquisar</string>
</resources>
