<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.ademarazn.projetofinal.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:drawableTop="@mipmap/ic_launcher"
        android:drawingCacheQuality="high"
        android:gravity="center"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/panel_rounded"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawableStart="@drawable/ic_person_outline_black_24dp"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:maxLength="@integer/max_usr_length" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_pwd_length"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_pwd_length" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:onClick="entrar"
                android:padding="16dp"
                android:text="@string/entrar"
                android:textColor="#fff"
                android:textSize="18sp">

                <requestFocus />
            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="esqueceu"
                android:text="@string/esqueceu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/Divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/ou" />

                <View style="@style/Divider" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="cadastrar"
                android:text="@string/cadastrar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View style="@style/Divider" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="sobre"
                android:text="@string/title_activity_sobre"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
