<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ademarazn.projetofinal.CadastrarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:inputType="textCapWords"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_sobrenome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sobrenome"
                    android:inputType="textCapWords"
                    android:maxLength="25" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario2"
                    android:inputType="text"
                    android:maxLength="@integer/max_usr_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha2"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_pwd_length" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email2"
                    android:inputType="textEmailAddress"
                    android:maxLength="@integer/max_email_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_dtnasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_dtnasc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="@string/dtnasc"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:inputType="textCapCharacters"
                    android:maxLength="@integer/max_cpf_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rg"
                    android:inputType="textCapCharacters"
                    android:maxLength="@integer/max_rg_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_passaporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_passaporte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passaporte"
                    android:inputType="textCapCharacters"
                    android:maxLength="@integer/max_passaporte_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:inputType="phone"
                    android:maxLength="@integer/max_phone_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/celular"
                    android:inputType="phone"
                    android:maxLength="@integer/max_cellphone_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco"
                    android:inputType="textCapWords"
                    android:maxLength="@integer/padrao" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_bairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bairro"
                    android:inputType="textCapWords"
                    android:maxLength="@integer/padrao" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cidade"
                    android:inputType="textCapWords"
                    android:maxLength="@integer/padrao" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:hint="@string/estado"
                    android:inputType="none"
                    android:maxLength="@integer/max_estado_length" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint">

                <EditText
                    android:id="@+id/edt_cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cep"
                    android:inputType="text"
                    android:maxLength="@integer/max_cep_length" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:visibility="invisible"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_menu_delete" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_alterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:visibility="invisible"
        app:backgroundTint="@color/colorBlue"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_menu_edit" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_menu_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_incluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible"
        app:backgroundTint="@color/colorGreen"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_menu_check" />

</android.support.design.widget.CoordinatorLayout>
